--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,10 +21,12 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      working-directory: pogoda
 
     - name: Run lint
       run: npm run lint
+      working-directory: pogoda
 
     - name: Run build
       run: npm run build
-
+      working-directory: pogoda
